--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 <script>
     // URL для вашего Google Apps Script Web App.
     // Замените этот placeholder на фактический URL после развертывания скрипта.
-    const GOOGLE_SHEET_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbx5Pa7xOUkG5PrmZD-FtCyO8zgtXPjOcO4KMDm4fLQdOV6v3MIVSksZNAEVgRqm1wpF4w/exec'; // Заменено на ваш URL
+    const GOOGLE_SHEET_WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbx7Pa7xOUkG5PrmZD-FtCyO8zgtXPjOcO4KMDm4fLQdOV6v3MIVSksZNAEVgRqm1wpF4w/exec'; // ВНИМАНИЕ: ЗДЕСЬ ДОЛЖЕН БЫТЬ ВАШ АКТУАЛЬНЫЙ URL WEb-APP GOOGLE APPS SCRIPT
 
     const dynamicElementData = {};
 
@@ -760,8 +760,10 @@
     }
 
     async function sendToGoogleSheet(formData, pdfBase64, installationPhotoDataUrl) {
-        if (!GOOGLE_SHEET_WEB_APP_URL || GOOGLE_SHEET_WEB_APP_URL === 'YOUR_GOOGLE_APPS_SCRIPT_WEB_APP_URL_HERE') {
-            console.error("GOOGLE_SHEET_WEB_APP_URL не установлен. Отправка в Google Sheet пропущена.");
+        // Проверка и сообщение, если URL не установлен
+        if (!GOOGLE_SHEET_WEB_APP_URL || GOOGLE_SHEET_WEB_APP_URL === 'https://script.google.com/macros/s/AKfycbx7Pa7xOUkG5PrmZD-FtCyO8zgtXPjOcO4KMDm4fLQdOV6v3MIVSksZNAEVgRqm1wpF4w/exec') {
+            console.error("GOOGLE_SHEET_WEB_APP_URL не установлен. Отправка в Google Sheet пропущена. Пожалуйста, обновите URL в коде Canvas.");
+            alert("Ошибка: URL для Google Таблицы не настроен. Пожалуйста, обновите код Canvas с правильным URL веб-приложения Google Apps Script.");
             return;
         }
 
@@ -787,6 +789,7 @@
 
         } catch (error) {
             console.error("Ошибка при отправке в Google Sheet:", error);
+            alert("Ошибка при отправке данных. Проверьте подключение к интернету или попробуйте позже."); // Более общее сообщение об ошибке
         }
     }
 
