--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             color: red;
         }
         /* Скрываем элементы управления, которые не нужны в PDF, используя class вместо media print */
+        /* Этот класс по-прежнему существует, но теперь он применяется только в скрипте generatePDFBlob */
         .hide-for-pdf {
             display: none !important;
         }
@@ -411,7 +412,7 @@
                 </div>
             </div>
         </div>
-        <div class="mb-3 mt-4 hide-for-pdf">
+        <div class="mb-3 mt-4"> <!-- Removed hide-for-pdf class -->
             <!-- New checkboxes for attachment control -->
             <div class="form-check attachment-checkbox">
                 <input class="form-check-input" type="checkbox" id="sendPdf" checked>
@@ -420,7 +421,7 @@
             
             <button id="submit-button" type="button" class="btn btn-primary">Отправить</button>
         </div>
-        <div class="mt-3 hide-for-pdf">
+        <div class="mt-3"> <!-- Removed hide-for-pdf class -->
             <small class="text-muted"><span style="color: red;">*</span> - обязательные поля</small>
         </div>
     </form>
